--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,6 @@ user_guide_src/build/*
 user_guide_src/cilexer/build/*
 user_guide_src/cilexer/dist/*
 user_guide_src/cilexer/pycilexer.egg-info/*
-/vendor/
-/aplication/config/database.php
 
 # IDE Files
 #-------------------------
@@ -28,3 +26,6 @@ user_guide_src/cilexer/pycilexer.egg-info/*
 *.stTheme.cache
 *.sublime-workspace
 *.sublime-project
+# custom ignore
+vendor/
+application/config/database.php
