--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,6 @@
   "description": "Application web for courses",
   "main": "",
   "license": "MIT",
-  "private": true,
   "ignore": [
     "**/.*",
     "node_modules",
@@ -15,9 +14,9 @@
     "test",
     "tests"
   ],
-  "dependencies": {
-    "bootstrap":"4",
-    "font-awesome": "4.7",
-    "quill": "1.0"
+  "devDependencies": {
+    "font-awesome": "^4.7.0",
+    "bootstrap": "^3.3.7",
+    "quill": "^1.3.3"
   }
 }
